# stg

./: Android.bp  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  METADATA  Makefile  README.md  abigail-reader.cc  abigail-reader.h  abigail_reader.cc  abigail_reader.h  abigail_reader_test.cc  btf-reader.cc  btf-reader.h  btf_reader.cc  btf_reader.h  btfinfo.cc  catch.cc  comparison.cc  comparison.h  crc.h  deduplication.cc  deduplication.h  dwarf.cc  dwarf.h  dwarf_processor.cc  dwarf_processor.h  dwarf_wrappers.cc  dwarf_wrappers.h  elf_loader.cc  elf_loader.h  elf_reader.cc  elf_reader.h  elf_reader_test.cc  equality.cc  equality.h  equality_cache.h  error.h  error_test.cc  (+57 more)
cmake/: FindJemalloc.cmake  FindLibDw.cmake  FindLibElf.cmake
doc/: DIFFS.md  NAMES.md  SCC.md  stg.md  stgdiff.md
fuzz/: abigail-reader-fuzzer.cc  abigail_reader_fuzzer.cc  btf-reader-fuzzer.cc  btf_reader_fuzzer.cc  elf_reader_fuzzer.cc  proto_reader_fuzzer.cc
test_cases/diff_tests/array/: length.0.c  length.1.c  multidimensional.0.cc  simple_array.0.c  simple_array.0.cc  simple_array.1.c  simple_array.1.cc
test_cases/diff_tests/composite/: abstract_base_class.0.cc  abstract_base_class.1.cc  anonymous.0.cc  anonymous_member.0.c  anonymous_member.1.c  anonymous_member_chain.0.c  anonymous_member_chain.1.c  base_class_order.0.cc  base_class_order.1.cc  base_class_size.0.cc  base_class_size.1.cc  forward.0.c  forward.1.c  indirect.0.c  indirect.1.c  kind.0.cc  kind.1.cc  members.0.c  members.1.c  method_order.0.cc  method_order.1.cc  named_change.1.c  named_definition_change.0.c  named_definition_change.1.c  struct_vs_union.0.c  struct_vs_union.1.c  virtual_inheritance.0.cc  virtual_only_base_class.0.cc  virtual_only_base_class.1.cc
test_cases/diff_tests/describe/: types.1.c
test_cases/diff_tests/enum/: automatic_underlying_type.0.c  automatic_underlying_type.1.c  named_change.1.c  named_definition_change.0.c  named_definition_change.1.c  order.0.c  order.1.c
test_cases/diff_tests/function/: array_parameter.0.c  methods.0.cc  (+11 more)
testdata/: abigail_anonymous_types_0.xml  abigail_anonymous_types_1.xml  abigail_anonymous_types_2.xml  abigail_anonymous_types_3.xml  abigail_anonymous_types_4.xml  abigail_bad_dwarf_elf_link_1.xml  abigail_bad_elf_dwarf_link_0.xml  abigail_bad_elf_dwarf_link_1.xml  abigail_bad_elf_dwarf_link_2.xml  abigail_clean.xml  abigail_dirty.xml  abigail_duplicate_data_members_0.xml  abigail_duplicate_data_members_1.xml  abigail_duplicate_types_0.xml  abigail_duplicate_types_1.xml  abigail_duplicate_types_2.xml  abigail_duplicate_types_3.xml  abigail_duplicate_types_4.xml  abigail_duplicate_types_5.xml  abigail_duplicate_types_6.xml  abigail_duplicate_types_7.xml  abigail_duplicate_types_8.xml  abigail_tree_0.xml  abigail_tree_1.xml  abigail_tree_2.xml  abigail_tree_3.xml  abigail_tree_4.xml  abigail_tree_5.xml  abigail_tree_6.xml  abigail_tree_7.xml  added_removed_symbols_0.xml  added_removed_symbols_1.xml  added_removed_symbols_only_0.xml  added_removed_symbols_only_1.xml  added_removed_symbols_only_short_diff  added_removed_symbols_short_diff  crc_0.xml  crc_1.xml  crc_change_0.stg  crc_change_1.stg  (+37 more)
(+469 files in other folders)
